--- a/Source/Forms/Base/Form.Base.fmx
+++ b/Source/Forms/Base/Form.Base.fmx
@@ -7,24 +7,19 @@ object fmBase: TfmBase
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnSaveState = FormSaveState
   DesignerMasterStyle = 0
-  object rctContent: TRectangle
+  object Context: TLayout
     Align = Client
-    Margins.Left = 1.000000000000000000
-    Margins.Top = 1.000000000000000000
-    Margins.Right = 1.000000000000000000
-    Margins.Bottom = 1.000000000000000000
-    Size.Width = 638.000000000000000000
-    Size.Height = 478.000000000000000000
+    Size.Width = 640.000000000000000000
+    Size.Height = 480.000000000000000000
     Size.PlatformDefault = False
-    object sbContent: TScrollBox
-      Align = Client
-      Size.Width = 638.000000000000000000
-      Size.Height = 478.000000000000000000
-      Size.PlatformDefault = False
+    TabOrder = 1
+    object Label1: TLabel
+      Position.X = 320.000000000000000000
+      Position.Y = 272.000000000000000000
+      Text = 'Label1'
       TabOrder = 0
-      Viewport.Width = 638.000000000000000000
-      Viewport.Height = 478.000000000000000000
     end
   end
   object ActionList1: TActionList
